chapter-4/argo-cd/staging/app.yaml
---
# Source: conference/charts/conference-app/charts/kafka/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-kafka-headless
  namespace: "staging"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-22.1.5
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: false
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - name: tcp-internal
      port: 9094
      protocol: TCP
      targetPort: kafka-internal
    - name: tcp-controller
      protocol: TCP
      port: 9093
      targetPort: kafka-ctlr
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/component: kafka
---
# Source: conference/charts/conference-app/charts/kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-kafka
  namespace: "staging"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-22.1.5
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
      nodePort: null
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/component: kafka
---
# Source: conference/charts/conference-app/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-postgresql-hl
  namespace: "staging"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.7
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/component: primary
---
# Source: conference/charts/conference-app/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-postgresql
  namespace: "staging"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.7
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/component: primary
---
# Source: conference/charts/conference-app/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-redis-headless
  namespace: "staging"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.11.3
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
  annotations:
    
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: staging-environment
---
# Source: conference/charts/conference-app/charts/redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-environment-redis-master
  namespace: "staging"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.11.3
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/component: master
---
# Source: conference/charts/conference-app/templates/agenda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agenda-service
  namespace: staging
spec:
  selector:
    app: agenda-service
  ports:
  - port: 80
    targetPort: 8080
---
# Source: conference/charts/conference-app/templates/c4p-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4p-service
  namespace: staging
spec:
  selector:
    app: c4p-service
  ports:
  - port: 80
    targetPort: 8080
---
# Source: conference/charts/conference-app/templates/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: staging
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
---
# Source: conference/charts/conference-app/templates/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: staging
spec:
  selector:
    app: notifications-service
  ports:
  - port: 80
    targetPort: 8080
---
# Source: conference/charts/conference-app/templates/agenda-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-environment-agenda-service-deployment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: agenda-service
  template:
    metadata:
      labels:
        app: agenda-service
        app.kubernetes.io/name: agenda-service
        app.kubernetes.io/part-of: agenda-service
        app.kubernetes.io/version: v1.0.0
        keptn.sh/post-deployment-tasks: stdout-notification
    spec:
      containers:
      - name: agenda-service
        image: "salaboy/agenda-service-0967b907d9920c99918e2b91b91937b3:v1.0.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8080
        ports:
        - containerPort: 8080
---
# Source: conference/charts/conference-app/templates/c4p-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-environment-c4p-service-deployment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: c4p-service
  template:
    metadata:
      labels:
        app: c4p-service
        app.kubernetes.io/name: c4p-service
        app.kubernetes.io/part-of: c4p-service
        app.kubernetes.io/version: v1.0.0
        keptn.sh/post-deployment-tasks: stdout-notification
    spec:
      containers:
      - name: c4p-service
        image: "salaboy/c4p-service-a3dc0474cbfa348afcdf47a8eee70ba9:v1.0.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8080
        ports:
        - containerPort: 8080
---
# Source: conference/charts/conference-app/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-environment-frontend-deployment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: frontend
        app.kubernetes.io/version: v1.0.0
        keptn.sh/post-deployment-tasks: stdout-notification
    spec:
      containers:
      - name: frontend
        image: "salaboy/frontend-go-1739aa83b5e69d4ccb8a5615830ae66c:v1.0.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8080
        ports:
        - containerPort: 8080
---
# Source: conference/charts/conference-app/templates/notifications-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-environment-notifications-service-deployment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
        app.kubernetes.io/name: notifications-service
        app.kubernetes.io/part-of: notifications-service
        app.kubernetes.io/version: v1.0.0
        keptn.sh/post-deployment-tasks: stdout-notification
    spec:
      containers:
      - name: notifications-service
        image: "salaboy/notifications-service-0e27884e01429ab7e350cb5dff61b525:v1.0.0"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health/liveness
            port: 8080
        readinessProbe:
          httpGet:
            path: /health/readiness
            port: 8080
        ports:
        - containerPort: 8080
---
# Source: conference/charts/conference-app/charts/kafka/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: staging-environment-kafka
  namespace: "staging"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-22.1.5
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kafka
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka
      app.kubernetes.io/instance: staging-environment
      app.kubernetes.io/component: kafka
  serviceName: staging-environment-kafka-headless
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka
        helm.sh/chart: kafka-22.1.5
        app.kubernetes.io/instance: staging-environment
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: kafka
      annotations:
    spec:
      
      hostNetwork: false
      hostIPC: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: kafka
                    app.kubernetes.io/instance: staging-environment
                    app.kubernetes.io/component: kafka
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      serviceAccountName: staging-environment-kafka
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /scripts/setup.sh
          ports:
            - name: kafka-client
              containerPort: 9092
            - name: kafka-internal
              containerPort: 9094
            - name: kafka-ctlr
              containerPort: 9093
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: kafka-client
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: kafka-client
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/kafka
            - name: logs
              mountPath: /opt/bitnami/kafka/logs
            - name: scripts
              mountPath: /scripts/setup.sh
              subPath: setup.sh
      volumes:
        - name: scripts
          configMap:
            name: staging-environment-kafka-scripts
            defaultMode: 0755
        - name: logs
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
---
# Source: conference/charts/conference-app/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: staging-environment-postgresql
  namespace: "staging"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.7
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: staging-environment-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: staging-environment
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: staging-environment-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-12.5.7
        app.kubernetes.io/instance: staging-environment
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: staging-environment
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: custom-init-scripts
          configMap:
            name: c4p-init-sql
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
---
# Source: conference/charts/conference-app/charts/redis/templates/master/application.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: staging-environment-redis-master
  namespace: "staging"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.11.3
    app.kubernetes.io/instance: staging-environment
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: staging-environment
      app.kubernetes.io/component: master
  serviceName: staging-environment-redis-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        helm.sh/chart: redis-17.11.3
        app.kubernetes.io/instance: staging-environment
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: master
      annotations:
        checksum/configmap: dbff8ebd116ebb0eecfe4ad15b5ae97f694dc3c3e73173fc85e9ce76f06fec7f
        checksum/health: f58f89986bf1c1b76f754707519bdabdaf882d1529ada2714e309ca976775c58
        checksum/scripts: e293239e961b3ec0ed924603508be72183175fec99fad75c252c30c49ae326e0
        checksum/secret: 0934df37c3286bd653b2e7f9d2814060b1008257608e141d902d7d633c5cb121
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: staging-environment-redis
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/instance: staging-environment
                    app.kubernetes.io/component: master
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: docker.io/bitnami/redis:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: start-scripts
          configMap:
            name: staging-environment-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: staging-environment-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: staging-environment-redis-configuration
        - name: redis-tmp-conf
          emptyDir: {}
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/instance: staging-environment
          app.kubernetes.io/component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
---
# Source: conference/charts/conference-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-environment-frontend-ingress 
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
